k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-lab-app
  namespace: devops-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-lab-app
  template:
    metadata:
      labels:
        app: devops-lab-app
    spec:
      containers:
        - name: app
          image: lugomer9/docker_actividad1_devops_cicd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
