k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: devops-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.2.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-datasource-volume
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboard-provider-volume
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-dashboard-volume
              mountPath: /var/lib/grafana/dashboards
      volumes:
        - name: grafana-datasource-volume
          configMap:
            name: grafana-datasource-config
        - name: grafana-dashboard-provider-volume
          configMap:
            name: grafana-dashboard-config
            items:
              - key: dashboard-provider.yaml
                path: dashboard-provider.yaml
        - name: grafana-dashboard-volume
          configMap:
            name: grafana-dashboard-config
            items:
              - key: app-dashboard.json
                path: app-dashboard.json
