k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-lab-service
  namespace: devops-lab
spec:
  selector:
    app: devops-lab-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
